Updates from Overleaf

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -22,40 +22,37 @@ The evolutionary dynamics that we observed in non-plastic populations, however, 
 \cite{dolson_interpreting_2020} proposed a suite of lineage and phylogeny metrics for quantifying the evolutionary histories of evolving populations of digital organisms; consistent with our findings, they observed that non-plastic populations evolved in cyclically changing environments exhibited higher phenotypic volatility and mutation accumulation than that of populations evolving in static conditions.
 \cite{lalejini_evolutionary_2016} visually inspected the evolutionary histories of non-plastic organisms evolved in fluctuating environments, observing that mutations readily switched the set of traits expressed by offspring.
 \cite{canino-koning_evolution_2016} investigated how different types of changing environments shape the genetic architectures of evolved organisms, showing that cyclically-changing environments can steer populations toward genotypes that more readily mutate to alternative phenotypes.
-Consistent with our observations, \cite{canino-koning_evolution_2016} also demonstrated that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
+Consistent with our experimental results, \cite{canino-koning_evolution_2016} also observed that genomes evolved in harsh cyclic environments often contained vestigial fragments of genetic material adapted to prior environments.
 %  - @Austin - depending on what you include about architecture results, you'll also want to work in results from Canino-Koning (2019); going to talk about their novel tasks results in next subsection.
 
 % -- In context of conventional evolutionary theory: evo response => f(selection, variation) --
 Our results are also consistent with conventional evolutionary theory.
 A trait's evolutionary response to selection depends on the strength of directional selection and on the amount of genetic variation for selection to act on [citations; Gilbert et al 2019].
-In our experiments, non-plastic populations repeatedly experienced strong directional selection to adjust which tasks were expressed after each environment change, and as such, retrospective analyses of successful lineages revealed high rates of genetic and phenotypic changes.
-[relevant examples from other work].
-Adaptive plasticity provided a mechanism for organisms to regulate task expression in response to environmental changes, which shielded plastic [populations/individuals] from strong directional selection when the environment changed and eliminated the need for a rapid evolutionary response to adjust task expression.
-As such, the rates of genetic and phenotypic change as well as the frequency of selective sweeps that we observed in adaptively plastic populations resembled that of populations evolving in a static environment. 
-[relevant examples from other work].
+In our experiments, non-plastic populations repeatedly experienced strong directional selection to [flip] which tasks were expressed after each environment change, and as such, retrospective analyses of successful lineages revealed rapid evolutionary responses (that is, high rates of genetic and phenotypic changes).
+[relevant examples of these dynamics from literature].
 
-%%%%%%%%%%%%
-% - Evidence for relaxed selection -
-%   (under construction)
-% - Observed a small but significant increase in phenotypic volatility in plastic populations relative to populations evolving in static conditions.
-% - Indeed, the increase in phenotypic volatility driven by observed along successful lineages affected traits that were unexpressed at the time of mutation.
-% - could point to relaxed selection
-% overall, not enough time between environmental changes for the genetic machinery of alternate phenotypes to degrade
-no selection
-off environment not long enough for relaxed selection to reliably degrade unexpressed phenotype
-can shift expression  provides a mechanism  shift a trait's expression toward the 
-[+ relevant examples of these dynamics]
-%%%%%%%%%%%%
+Adaptive plasticity provided a mechanism for organisms to regulate task expression in response to environmental changes.
+The rates of genetic and phenotypic change as well as the frequency of selective sweeps that we observed in adaptively plastic populations resembled that of populations evolving in a static environment.
+This result supports that adaptive plasticity shielded [populations/individuals] from strong directional selection when the environment changed, eliminating the need for a rapid evolutionary response to adjust task expression. 
+[relevant examples of these dynamics from other work].
+
+% -- Evidence for relaxed selection --
+We did observe evidence of mutation accumulation in plastic lineages that resulted in the [loss of unexpressed traits important to the alternate environment].
+However, because our analyses focused retrospectively on successful lineages, nearly all of these deleterious mutations along the lineage were followed by a compensatory mutation that restored the lost unexpressed trait before the environment changed; any descendants without an optimal response to environmental changes would have been quickly outcompeted.
+Environmental fluctuations in our experiments were frequent enough such that genes controlling plasticity and important unexpressed genes were not lost from the population due to relaxed selection.
+Additionally, we imposed no additional costs on phenotypic plasticity, which minimized selection against the maintenance of plastic genes during the periods between environmental changes.  
+% minimized [chances that non-plastic variants could outcompete plastic variants in conditions where plasticity was allowed].
+[relevant examples of these dynamics/predictions about how results change if plasticity is costly?].
 
 % - hodgepodge of limitations  -
-Our conclusions are limited to \textit{adaptively} plastic populations; we did not explore the affects of non-adaptive plasticity.
+Our conclusions are limited to \textit{adaptively} plastic populations; we did not explore the affects of non-adaptive plasticity in which environmental cues shift a trait further away from the phenotypic optimum.
+% Non-adaptive plasticity can increase a population's extinction risk, especially if a [misaligned] plastic trait is strongly tied to survival [citations].
+% If the population persists, however, the population should experience strong directional selection against maladaptive responses to environmental cues, resulting in rapid evolutionary change [citations].
 % streamline next sentence
-[Further, environmental cues were reliable, and environmental changes were consistent over time; that is, sensors perfectly differentiated environments, and environmental fluctuations did not expose populations [\textit{novel}/entirely new] conditions.]
-As such, our results are not necessarily evidence against hypotheses that predict that plasticity can accelerate evolutionary responses (e.g., the `genes as followers' hypothesis), as these hypotheses primarily focus on contexts where [plasticity reveals previously unexpressed response to environment or helps population survive in new environment (e.g., plastic rescue)].
-We imposed no additional costs on plasticity, which minimized [chances that non-plastic variants could outcompete plastic variants in conditions where plasticity was allowed].
-[aim to establish/explore baseline expectations for population dynamics in simple cyclic environment.(?)]
-% Indeed, we limited our analyses to phase two where populations were already adapted to their treatment conditions.
+Further, environmental cues in our experiments were reliable, and environmental changes were consistent over time; that is, sensory instructions perfectly differentiated between ENV-A and ENV-B, and environmental fluctuations never exposed populations to entirely new conditions.
+As such, our data do not necessarily provide evidence for or against the genes as followers or plastic rescue hypotheses, as these hypotheses focus on contexts where plastic populations experience novel or abnormally stressful environmental change.
 
+\vspace{0.25cm}
 \subsection{Plastic populations retain more novel traits than non-plastic populations in fluctuation environments}
 
 % - expectations based on previous experiment and literature -
@@ -95,6 +92,7 @@ Such co-occurences were disproportionately observed in non-plastic populations [
 [Future work/next steps: explore more complex changes to environment; changes affect sensors; start testing plasticity-first adaptation, ...].
 % ... etc etc
 
+\vspace{0.25cm}
 \subsection{Non-plastic populations experience more genetic hitchhiking than plastic populations in fluctuating environments}
 
 % When do we expect to see hitchhiking?
@@ -136,7 +134,10 @@ We found that adaptive phenotypic plasticity can reduce a population's susceptib
 % - novel traits do not affect sensor readings
 %   - environment changes do not induce phenotypic changes 
 
+\vspace{0.25cm}
 \subsection{Future directions}
+
+% [aim to establish/explore baseline expectations for population dynamics in simple cyclic environment.(?)]
 
 % demonstrate how we can use digital evolution to test hypotheses about phenotypic plasticity => bridge gap between natural experimental systems (in lab and in field) and mathematical modeling
 
