--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -427,3 +427,10 @@ In this way, we can reward or punish particular phenotypic traits.
 % Mutations that are shielded from selection (due to inexpression) can accumulate in genes associated with the plastic response; selection can then act on this  ``hidden'' genetic variation when the environment changes \citep{schlichting_hidden_2008,levis_evaluating_2016}.  
 
 % This ``hidden'' genetic variation can accumulates in a plastic trait's response to a novel or infrequently experienced environmental cue, creating opportunities for selection when environmental conditions change to reveal this hidden variation .
+
+% do not lend evidence against the genes as followers hypothesis, as 
+% are not necessarily evidence against hypotheses that predict that plasticity can accelerate evolutionary responses (e.g., the `genes as followers' hypothesis), as these hypotheses primarily focus on contexts where [plasticity reveals previously unexpressed response to environment or helps population survive in new environment (e.g., plastic rescue)].
+% We imposed no additional costs on plasticity, which minimized [chances that non-plastic variants could outcompete plastic variants in conditions where plasticity was allowed].
+% Indeed, we limited our analyses to phase two where populations were already adapted to their treatment conditions.
+
+% In our experiments, adaptive plasticity provided a mechanism for organisms to regulate task expression in response to environmental changes, which shielded plastic [populations/individuals] from strong directional selection when the environment changed and eliminated the need for a rapid evolutionary response to adjust task expression.
