--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -14,13 +14,13 @@
 % Avida provides a computational study system where populations of digital organisms undergo Darwinian evolution, allowing researchers to test hypotheses that would be difficult or impossible to address in natural systems.
 
 % - Define digital organisms -
-Avida is a study system wherein self-replicating computer programs (digital organisms) compete for space on a finite toroidal grid \citep{ofria_avida:_2009}. 
+Avida is a study system wherein self-replicating computer programs (digital organisms) compete for space on a finite toroidal grid \citep{ofria_avida:_2009}.
 % Self-replication, however, is imperfect such that organisms mutate randomly and evolve. 
 % in a well mixed population(?)
 Each digital organism is defined by a linear sequence of program instructions (its genome) and a set of virtual hardware components used to interpret and express those instructions [Figure?].
 % Avida tracks each organism as it expresses its genome in a given environment in order to measure that organism's phenotype.
-Genomes are expressed sequentially except when the execution of one instruction deterministically changes which instruction should be executed next (e.g., a `jump' instruction).   
-Genomes are built using a instruction set that is both robust and Turing Complete [cite]; that is, any ordering of instructions is syntactically valid (though not necessarily meaningful), and genomes are able to represent any computable function (though not necessarily in an efficient manner).
+Genomes are expressed sequentially except when the execution of one instruction deterministically changes which instruction should be executed next (e.g., a `jump' instruction). 
+Genomes are built using an instruction set that is both robust and Turing Complete [cite]; that is, any ordering of instructions is syntactically valid (though not necessarily meaningful), and genomes are able to represent any computable function (though not necessarily in an efficient manner).
 The instruction set includes operations for basic computations, flow control (e.g., conditional logic and looping), input, output, and self-replication.
 % @AML: Outsource the next sentence to a figure!
 % The virtual hardware set includes components such as a central processing unit (CPU) for executing instructions, registers to store values, buffers for inputs and outputs, and memory stacks \citep{ofria_avida:_2009}.
@@ -28,14 +28,14 @@ The instruction set includes operations for basic computations, flow control (e.
 % - define reproduction & mutation -
 Organisms in Avida reproduce asexually by copying their genome instruction-by-instruction and then dividing. 
 % However, these operations can be configured to be erroneous, potentially resulting in mutated offspring.
-However, copy operations are imperfect, and erroneous copy operations result in single-instruction substitution mutations in the offspring genome. 
-For this work, we configured copy operations to err at a per-instruction rate of 0.0025 (i.e., one mutation expected for every 400 instructions copied).
+However, copy operations are imperfect and can result in single-instruction substitution mutations in an offspring's genome. 
+For this work, we configured copy operations to err at a rate of one expected mutation for every 400 instructions copied (i.e, a per-instruction error rate of 0.0025).
+% at a per-instruction rate of 0.0025 (i.e., one mutation expected for every 400 instructions copied).
 We held individual genomes at a fixed length of 100 instructions; that is, we did not include insertion and deletion mutations. 
-Our use of fixed-length genomes controls [for the fact] that different environmental conditions can result in the evolution of substantially different genome sizes in Avida [supplement, citations] [and we did not want differences in treatments to be driven by different genome sizes].
-[We did replicate our experiments with variable-length genomes and observed qualitatively similar results].
+We used fixed-length genomes to control for treatment-specific conditions resulting in the evolution of substantially different genome sizes [supplement, citations]\footnote{We repeated our experiments without genome size restrictions and observed qualitatively similar results [cite supplement].}, which could, on its own, drive differences in evolutionary outcomes among experimental treatments.
 When an organism divides, its offspring is placed in a random location on the toroidal grid, replacing any previous occupant.
-For this work, we used the default 60 by 60 grid size, and as such, the population size is limited to 3600 organisms.
-Thus, there is a competition for space in Avida, and as such, improvements to the speed of self-replication are advantageous.
+For this work, we used the default 60 by 60 grid size, which limits the maximum population size to 3600 organisms.
+As such, improvements to the speed of self-replication are advantageous in the competition for space.
 % The combination of this competition for space and heritable variation from imperfect replication results in evolution by natural selection.
 
 % Nkrumah:
